# worker-insanely-fast-whisper

./: BUILD.bazel  Dockerfile  MODULE.bazel  WORKSPACE
builder/: cache_model.py  requirements.txt
src/: handler.py  rp_schema.py
